# Launchr

./: .gitignore  Anchor.toml  CLAUDE.md  README.md  docker-compose.yml
.github/workflows/: deploy-backend.yml
backend/: .dockerignore  .env.example  Dockerfile  fly.toml  package-lock.json  package.json  supabase-schema.sql  tsconfig.json
backend/scripts/: init-config.ts
backend/src/: index.ts
backend/src/config/: tokenomics.ts
backend/src/lib/: index.ts  load-balancer.ts  rate-limit.ts  security.ts
backend/src/models/: accounts.ts
backend/src/routes/: chart.ts  health.ts  launches.ts  stats.ts  trades.ts  upload.ts  users.ts
backend/src/services/: cache.ts  helius.ts  indexer.ts  jito.ts  jupiter.ts  metaplex.ts  monitoring.ts  (+3 more)
frontend/: .env.production  Dockerfile  config-overrides.js  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vercel.json
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx  index.tsx
program/: Anchor.toml  README.md
program/programs/launchr/: Cargo.toml
program/programs/launchr/src/: lib.rs  seeds.rs
program/programs/launchr/src/instructions/: buy.rs  create_launch.rs  graduate.rs  init_config.rs  sell.rs
program/programs/launchr/src/math/: bonding_curve.rs  orbit_math.rs
program/programs/launchr/src/state/: config.rs  launch.rs  user_position.rs
programs/launchr/: Cargo.toml
programs/launchr/src/instructions/: buy.rs  mod.rs  sell.rs
programs/launchr/src/math/: bonding_curve.rs  mod.rs  orbit_math.rs
programs/launchr/src/state/: config.rs  launch.rs  mod.rs
(+28 files in other folders)
