[package]
name = "launchr"
version = "1.0.0"
description = "Launchr - Launch into Orbit. Bonding curve token launches that graduate into Orbit Finance DLMM liquidity."
edition = "2021"
authors = ["CipherLabs"]
license = "MIT"
repository = "https://github.com/cipherlabs/launchr"

[lib]
crate-type = ["cdylib", "lib"]
name = "launchr"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.29.0", features = ["token"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
